--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <nav>
         <div class="row">
           <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
+          <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
           <ul class="main-nav">
             <li><a href="#">Food delivery</a></li>
             <li><a href="#">How it works</a></li>
@@ -25,12 +26,12 @@
       </nav>
       <div class="hero-text-box">
         <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
-        <a class="btn btn-full" href="">I’m hungry</a>
-        <a class="btn btn-ghost" href="">Show me more</a>
+        <a class="btn btn-full js--scroll-to-plans" href="">I’m hungry</a>
+        <a class="btn btn-ghost js--scroll-to-start" href="">Show me more</a>
       </div>
     </header>
 
-    <section class="section-features">
+    <section class="section-features js--section-features">
       <div class="row">
         <h2>Get food fast &mdash; not fast food</h2>
         <p class="long-copy">Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!</p>
@@ -232,7 +233,7 @@
       </div>
     </section>
 
-    <section class="section-plans">
+    <section class="section-plans js--section-plans">
       <div class="row">
         <h2>Start eating healthy today</h2>
       </div>
@@ -387,15 +388,16 @@
         <p>Copyright &copy; 2015 by Omnifood. All rights reserved</p>
       </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/g/respond@1.4.2,html5shiv@3.7.3"></script>
+    <script src="https://cdn.jsdelivr.net/g/respond@1.4.2,html5shiv@3.7.3,selectivizr@1.0.3b"></script>
+    <script src="vendors/js/jquery.waypoints.min.js"></script>
+    <script src="resources/js/script.js"></script>
   </body>
+
 </html>
 
 <!--
-Navigation:
-1. About us
-2. Blog
-3. Press
-4. iOS App
-5. Android App
 
 -->
